--- a/food-delivery-app/package.json
+++ b/food-delivery-app/package.json
@@ -12,11 +12,12 @@
   "license": "ISC",
   "devDependencies": {
     "parcel": "^2.8.3",
-    "process": "^0.11.10"
+    "postcss": "^8.4.39",
+    "process": "^0.11.10",
+    "tailwindcss": "^3.4.4"
   },
   "dependencies": {
     "gitignore": "^0.7.0",
-    "parcel": "^2.12.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.24.0"
